USE1401.H

/****************************************************************************/
/*                                                                          */
/* Return codes from functions                                              */
/*                                                                          */
/****************************************************************************/

#define U14ERR_NOERROR        0           /* no problems                    */
#define U14ERR_OFF            -500        /* 1401 there but switched off    */
#define U14ERR_NC             -501        /* 1401 not connected             */
#define U14ERR_ILL            -502        /* if present it is ill           */
#define U14ERR_NOIF           -503        /* I/F card missing               */
#define U14ERR_TIME           -504        /* 1401 failed to come ready      */
#define U14ERR_BADSW          -505        /* I/F card bad switches          */
#define U14ERR_PTIME          -506        /* 1401+ didn't come ready UNUSED */
#define U14ERR_NOINT          -507        /* couldn't grab the int vector   */
#define U14ERR_INUSE          -508        /* 1401 is already in use         */
#define U14ERR_NODMA          -509        /* couldn't get DMA channel       */
#define U14ERR_BADHAND        -510        /* handle provided was bad        */
#define U14ERR_BAD1401NUM     -511        /* 1401 number provided was bad   */
#define U14ERR_NO_SUCH_FN     -520        /* no such function               */
#define U14ERR_NO_SUCH_SUBFN  -521        /* no such sub function           */
#define U14ERR_ERR_NOOUT      -522        /* no room in output buffer       */
#define U14ERR_ERR_NOIN       -523        /* no input in buffer             */
#define U14ERR_ERR_STRLEN     -524        /* string longer than buffer      */
#define U14ERR_LOCKFAIL       -525        /* failed to lock memory          */
#define U14ERR_UNLOCKFAIL     -526        /* failed to unlock memory        */
#define U14ERR_ALREADYSET     -527        /* area already set up            */
#define U14ERR_NOTSET         -528        /* area not set up                */
#define U14ERR_BADAREA        -529        /* illegal area number            */
#define U14ERR_NOFILE         -540        /* command file not found         */
#define U14ERR_READERR        -541        /* error reading command file     */
#define U14ERR_UNKNOWN        -542        /* unknown command                */
#define U14ERR_HOSTSPACE      -543        /* not enough host space to load  */
#define U14ERR_LOCKERR        -544        /* could not lock resource/command*/
#define U14ERR_CLOADERR       -545        /* CLOAD command failed           */
#define U14ERR_TOXXXERR       -560        /* tohost/1401 failed             */
#define U14ERR_NO386ENH       -580        /* not 386 enhanced mode          */
#define U14ERR_NO1401DRIV     -581        /* no device driver               */
#define U14ERR_DRIVTOOOLD     -582        /* device driver too old          */
#define U14ERR_TIMEOUT        -590        /* timeout occurred               */
#define U14ERR_BUFF_SMALL     -600        /* buffer for getstring too small */
#define U14ERR_CBALREADY      -601        /* there is already a callback    */
#define U14ERR_BADDEREG       -602        /* bad parameter to deregcallback */
#define U14ERR_DRIVCOMMS      -610        /* failed talking to driver       */
#define U14ERR_OUTOFMEMORY    -611        /* neede memory and couldnt get it*/
#define U14TYPE1401           0           /* standard 1401                  */
#define U14TYPEPLUS           1           /* 1401 plus                      */
#define U14TYPEU1401          2           /* u1401                          */
#define U14TYPEUNKNOWN        -1          /* dont know                      */
typedef TCSBLOCK*  LPTCSBLOCK;
typedef TCSBLOCK FAR *  LPTCSBLOCK;
        /* Returns non zero if the timed passed in has been passed 0 if not */

U14API(short) U14LastErrCode(short hand);
U14API(short) U14Open1401(short n1401);
U14API(short) U14Close1401(short hand);
U14API(short) U14Reset1401(short hand);
U14API(short) U14TypeOf1401(short hand);
U14API(short) U14Stat1401(short hand);
U14API(short) U14CharCount(short hand);
U14API(short) U14LineCount(short hand);
U14API(short) U14SendString(short hand, LPCSTR lpString);
U14API(short) U14GetString(short hand, LPSTR lpBuffer, WORD wMaxLen);
U14API(short) U14SendChar(short hand, char cChar);
U14API(short) U14GetChar(short hand, LPSTR lpcChar);
U14API(short) U14LdCmd(short hand, LPCSTR command);
U14API(DWORD) U14Ld(short hand, LPCSTR vl, LPCSTR str);
U14API(short) U14SetTransArea(short hand, WORD wArea, void FAR * lpvBuff,
                                            DWORD dwLength, short eSz);
U14API(short) U14UnSetTransfer(short hand, WORD wArea);
U14API(short) U14ToHost(short hand, LPSTR lpAddrHost,DWORD dwSize,DWORD dw1401,
                                                            short eSz);
U14API(short) U14To1401(short hand, LPCSTR lpAddrHost,DWORD dwSize,DWORD dw1401,
                                                            short eSz);
U14API(short) U14StrToLongs(LPCSTR lpszBuff,long FAR *lpalNums,short sMaxLongs);
U14API(short) U14LongsFrom1401(short hand, long FAR * lpalBuff,short sMaxLongs);
U14API(void)  U14SetTimeout(short hand, long lTimeout);
U14API(long)  U14GetTimeout(short hand);
U14API(short) U14OutBufSpace(short hand);
U14API(long)  U14BaseAddr1401(short hand);
U14API(long)  U14DriverVersion(void);
U14API(short) U14GetUserMemorySize (short hand, long FAR * lpMemorySize);
U14API(short) U14KillIO1401(short hand);
U14API(short) U14ZeroBlockCount(short hand);
U14API(short) U14ByteCount(short hand, long FAR * lpHowMany);
U14API(short) U14BlkTransState(short hand);
U14API(short) U14StopCircular(short hand);
U14API(short) U14StateOf1401(short hand);
U14API(short) U14Grab1401(short hand);
U14API(short) U14Free1401(short hand);
U14API(short) U14Step1401(short hand);
U14API(short) U14StepTill1401(short hand, long steps, long targetAddress);
U14API(short) U14Registers1401(short hand, LPTCSBLOCK lpBlock);
U14API(short) U14Set1401Registers(short hand, LPTCSBLOCK lpBlock);
U14API(short) U14SetOrin(short hand, short sOrIn);
#define  MINDRIVERMAJREV   1    /* minimum driver revision level we need    */
#define  CED_1401_Device_ID   0x2952            /* VxD ID for CED_1401.386  */
				   /* if we are in NT/Win95/Win32s we have extra bits       */

#define  MINDRIVERMAJREV   1    /* minimum driver revision level we need    */
#define  MINDRIVERMAJREV   2     /* minimum driver revision level we need   */